Working version that produces the results in the draft 2024-01-14

--- a/notebooks/Untitled2.ipynb
+++ b/notebooks/Untitled2.ipynb
@@ -28,13 +28,19 @@
    "source": [
     "df <- read_feather('~/Documents/hinf/results/feather/Hinf_norm_mic.feather')\n",
     "df$AMP_MIC <- as.numeric(df$AMP_MIC)\n",
-    "df$AMP_MIC.rankscaled <- RankNorm(df$AMP_MIC)\n",
+    "df$AMP_MIC.logscaled <- log2(df$AMP_MIC)\n",
     "df <- subset(df, select = -c(FullID, Perc.ReadsMapped, CoverageMappedReads,\n",
     "                             origin, AMP, serotype, beta_lactamase, samples, AMP_MIC))\n",
     "\n",
     "mutations <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T', 'ID_1688339_T', 'ID_1688340_G', 'ID_1688350_C', 'ID_1688354_T', 'ID_1688361_A', 'ID_1688365_A', 'ID_1688365_G', 'ID_1688415_C', 'ID_1688482_T', 'ID_1688533_A',\n",
-    "               'ID_1688543_T', 'ID_1688543_C', 'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T', 'ID_1688776_C', 'ID_1688990_A', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T', 'ID_1689667_C', 'ID_1689700_T', 'ID_1689747_A', \n",
-    "               'ID_1689751_T', 'ID_1690021_G','ID_1690057_T', 'ID_1690102_G')\n",
+    "               'ID_1688543_T', 'ID_1688543_C', 'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T', 'ID_1688776_C', 'ID_1688967_G', 'ID_1688990_A', 'ID_1689051_T', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T', 'ID_1689667_C',\n",
+    "               'ID_1689700_T', 'ID_1689747_A', 'ID_1689751_T', 'ID_1690021_G','ID_1690057_T', 'ID_1690102_G')\n",
+    "\n",
+    " \n",
+    "\n",
+    "   \n",
+    "       'ID_1688967_G',  'ID_1689051_T',\n",
+    "\n",
     "\n",
     "xys <- expand.grid(mutations, mutations)\n",
     "\n",
@@ -59,7 +65,7 @@
     "  y <- as.character(xys[i, 2])\n",
     "\n",
     "    if (x != y){\n",
-    "        formula <- paste(\"AMP_MIC.rankscaled ~ `\", x, \"` + `\", y, \"`\", sep=\"\")\n",
+    "        formula <- paste(\"AMP_MIC.logscaled ~ `\", x, \"` + `\", y, \"`\", sep=\"\")\n",
     "\n",
     "        models[[i]] <- lm(formula = formula, df)\n",
     "\n",
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "3f9314f7-88cc-4f34-a368-0f3fe87529f7",
    "metadata": {},
    "outputs": [
@@ -121,53 +127,65 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = AMP_MIC.rankscaled ~ ., data = df2)\n",
+       "lm(formula = AMP_MIC.logscaled ~ ., data = df2)\n",
        "\n",
        "Residuals:\n",
-       "     Min       1Q   Median       3Q      Max \n",
-       "-1.73335 -0.40463 -0.02871  0.31404  3.12357 \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-2.5865 -0.4802 -0.0207  0.3115  3.9793 \n",
        "\n",
        "Coefficients: (4 not defined because of singularities)\n",
-       "            Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept) -0.89502    0.18833  -4.752 3.52e-06 ***\n",
-       "`1688312_A`  0.30682    0.20376   1.506 0.133474    \n",
-       "`1688314_T` -0.02019    0.42392  -0.048 0.962055    \n",
-       "`1688320_C`  0.51279    0.49890   1.028 0.305094    \n",
-       "`1688338_T`  0.26556    0.36557   0.726 0.468309    \n",
-       "`1688339_T` -0.11173    0.37015  -0.302 0.763026    \n",
-       "`1688340_G`       NA         NA      NA       NA    \n",
-       "`1688350_C`       NA         NA      NA       NA    \n",
-       "`1688354_T`       NA         NA      NA       NA    \n",
-       "`1688361_A` -0.10854    0.44618  -0.243 0.808014    \n",
-       "`1688365_A` -0.03817    0.33685  -0.113 0.909877    \n",
-       "`1688365_G`       NA         NA      NA       NA    \n",
-       "`1688415_C` -0.35758    0.26983  -1.325 0.186404    \n",
-       "`1688482_T`  0.33326    0.21650   1.539 0.125088    \n",
-       "`1688533_A` -0.18680    0.33481  -0.558 0.577433    \n",
-       "`1688543_T`  0.40139    0.47168   0.851 0.395649    \n",
-       "`1688543_C`  0.96974    0.30037   3.228 0.001424 ** \n",
-       "`1688616_A`  0.25321    0.34734   0.729 0.466741    \n",
-       "`1688617_T`  0.49094    0.40545   1.211 0.227177    \n",
-       "`1688652_T` -0.02747    0.27226  -0.101 0.919711    \n",
-       "`1688770_T` -0.17746    0.19618  -0.905 0.366619    \n",
-       "`1688776_C` -0.37284    0.33603  -1.110 0.268338    \n",
-       "`1688990_A`  0.88346    0.26010   3.397 0.000802 ***\n",
-       "`1689405_T`  0.03396    0.20129   0.169 0.866173    \n",
-       "`1689438_A` -0.20221    0.56219  -0.360 0.719411    \n",
-       "`1689466_T` -1.47037    0.57518  -2.556 0.011213 *  \n",
-       "`1689667_C`  1.28286    0.51384   2.497 0.013230 *  \n",
-       "`1689700_T` -0.15728    0.15660  -1.004 0.316250    \n",
-       "`1689747_A` -0.13808    0.39446  -0.350 0.726610    \n",
-       "`1689751_T` -0.02660    0.39124  -0.068 0.945854    \n",
-       "`1690021_G` -1.59146    0.97096  -1.639 0.102552    \n",
-       "`1690057_T` -0.01865    0.20045  -0.093 0.925946    \n",
-       "`1690102_G`  1.36389    0.97282   1.402 0.162247    \n",
+       "              Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept)  -1.472397   0.284494  -5.175 5.05e-07 ***\n",
+       "ID_1688312_A  0.609532   0.272178   2.239   0.0261 *  \n",
+       "ID_1688314_T -0.073891   0.666922  -0.111   0.9119    \n",
+       "ID_1688320_C  0.777627   0.688850   1.129   0.2602    \n",
+       "ID_1688338_T -0.094583   0.462242  -0.205   0.8381    \n",
+       "ID_1688339_T  0.027381   0.468358   0.058   0.9534    \n",
+       "ID_1688340_G        NA         NA      NA       NA    \n",
+       "ID_1688350_C        NA         NA      NA       NA    \n",
+       "ID_1688354_T        NA         NA      NA       NA    \n",
+       "ID_1688361_A -0.566715   0.649480  -0.873   0.3838    \n",
+       "ID_1688365_A  0.593044   0.406522   1.459   0.1460    \n",
+       "ID_1688365_G        NA         NA      NA       NA    \n",
+       "ID_1688415_C -0.989783   0.444905  -2.225   0.0271 *  \n",
+       "ID_1688482_T  0.493366   0.290319   1.699   0.0906 .  \n",
+       "ID_1688533_A  0.380654   0.465688   0.817   0.4146    \n",
+       "ID_1688543_T  0.307043   0.762056   0.403   0.6874    \n",
+       "ID_1688543_C  0.933453   0.387698   2.408   0.0169 *  \n",
+       "ID_1688616_A  1.104850   0.535285   2.064   0.0402 *  \n",
+       "ID_1688617_T  1.286659   0.544317   2.364   0.0189 *  \n",
+       "ID_1688652_T  0.085237   0.365248   0.233   0.8157    \n",
+       "ID_1688770_T -0.199355   0.249155  -0.800   0.4245    \n",
+       "ID_1688776_C  0.576956   0.543255   1.062   0.2894    \n",
+       "ID_1688967_G  1.761027   0.885145   1.990   0.0479 *  \n",
+       "ID_1688990_A  0.418614   0.405044   1.034   0.3025    \n",
+       "ID_1689051_T  0.002889   0.906310   0.003   0.9975    \n",
+       "ID_1689073_T  0.139648   0.311539   0.448   0.6544    \n",
+       "ID_1689405_T -0.109245   0.321585  -0.340   0.7344    \n",
+       "ID_1689438_A -0.964034   0.917465  -1.051   0.2945    \n",
+       "ID_1689466_T  0.071463   0.986266   0.072   0.9423    \n",
+       "ID_1689603_T -0.075465   0.350065  -0.216   0.8295    \n",
+       "ID_1689624_T -1.433319   1.132938  -1.265   0.2071    \n",
+       "ID_1689627_G  0.468661   0.361879   1.295   0.1966    \n",
+       "ID_1689667_C  1.449420   0.828874   1.749   0.0817 .  \n",
+       "ID_1689700_T -0.045001   0.358716  -0.125   0.9003    \n",
+       "ID_1689718_G  0.770055   0.865620   0.890   0.3746    \n",
+       "ID_1689730_A  0.230122   1.298272   0.177   0.8595    \n",
+       "ID_1689747_A  1.538381   1.278525   1.203   0.2302    \n",
+       "ID_1689751_T -0.040662   1.217414  -0.033   0.9734    \n",
+       "ID_1689757_G -1.747334   1.770260  -0.987   0.3247    \n",
+       "ID_1689897_C -1.717834   0.988763  -1.737   0.0837 .  \n",
+       "ID_1689955_C  0.904309   0.852104   1.061   0.2897    \n",
+       "ID_1690021_G -1.177625   1.465229  -0.804   0.4224    \n",
+       "ID_1690030_A -0.277147   0.270125  -1.026   0.3060    \n",
+       "ID_1690057_T -0.198130   0.278061  -0.713   0.4769    \n",
+       "ID_1690102_G  0.938720   1.466677   0.640   0.5228    \n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "Residual standard error: 0.728 on 233 degrees of freedom\n",
-       "Multiple R-squared:  0.4997,\tAdjusted R-squared:  0.4396 \n",
-       "F-statistic: 8.312 on 28 and 233 DF,  p-value: < 2.2e-16\n"
+       "Residual standard error: 0.907 on 224 degrees of freedom\n",
+       "Multiple R-squared:  0.594,\tAdjusted R-squared:  0.5215 \n",
+       "F-statistic: 8.194 on 40 and 224 DF,  p-value: < 2.2e-16\n"
       ]
      },
      "metadata": {},
@@ -175,18 +193,40 @@
     }
    ],
    "source": [
-    "df <- read_feather('~/Documents/hinf/results/feather/Hinf_norm_mic.feather')\n",
+    "df <- read_feather('~/Documents/2023_haemophilius_gwas/hinf/results/feather/Hinf_norm_mic.feather')\n",
     "df$AMP_MIC <- as.numeric(df$AMP_MIC)\n",
-    "df$AMP_MIC.rankscaled <- RankNorm(df$AMP_MIC)\n",
+    "df$AMP_MIC.logscaled <- log2(df$AMP_MIC)\n",
     "df <- subset(df, select = -c(FullID, Perc.ReadsMapped, CoverageMappedReads,\n",
     "                             origin, AMP, serotype, beta_lactamase, samples, AMP_MIC))\n",
     "\n",
-    "mutations <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T', 'ID_1688339_T', 'ID_1688340_G', 'ID_1688350_C', 'ID_1688354_T', 'ID_1688361_A', 'ID_1688365_A', 'ID_1688365_G', 'ID_1688415_C', 'ID_1688482_T', 'ID_1688533_A', \n",
-    "               'ID_1688543_T', 'ID_1688543_C', 'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T', 'ID_1688776_C', 'ID_1688990_A', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T', 'ID_1689667_C', 'ID_1689700_T', 'ID_1689747_A', \n",
-    "               'ID_1689751_T', 'ID_1690021_G','ID_1690057_T', 'ID_1690102_G')\n",
-    "df2 <- select(df, AMP_MIC.rankscaled, all_of(mutations))\n",
+    "# original 32 variants in ftsI that lead to AA-changes\n",
+    "mutations <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T', 'ID_1688339_T', 'ID_1688340_G', 'ID_1688350_C', 'ID_1688354_T', 'ID_1688361_A', 'ID_1688365_A', 'ID_1688365_G', 'ID_1688415_C', 'ID_1688482_T', 'ID_1688533_A',\n",
+    "               'ID_1688543_T', 'ID_1688543_C', 'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T', 'ID_1688776_C', 'ID_1688967_G', 'ID_1688990_A', 'ID_1689051_T', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T', 'ID_1689667_C',\n",
+    "               'ID_1689700_T', 'ID_1689747_A', 'ID_1689751_T', 'ID_1690021_G','ID_1690057_T', 'ID_1690102_G')\n",
     "\n",
-    "model_all <-lm(AMP_MIC.rankscaled ~ ., df2)\n",
+    "# 44 variants in ftsI that lead to AA-changes (new annotations\n",
+    "mutations <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T',\n",
+    "       'ID_1688339_T', 'ID_1688340_G', 'ID_1688350_C', 'ID_1688354_T',\n",
+    "       'ID_1688361_A', 'ID_1688365_A', 'ID_1688365_G', 'ID_1688415_C',\n",
+    "       'ID_1688482_T', 'ID_1688533_A', 'ID_1688543_T', 'ID_1688543_C',\n",
+    "       'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T',\n",
+    "       'ID_1688776_C', 'ID_1688967_G', 'ID_1688990_A', 'ID_1689051_T',\n",
+    "       'ID_1689073_T', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T',\n",
+    "       'ID_1689603_T', 'ID_1689624_T', 'ID_1689627_G', 'ID_1689667_C',\n",
+    "       'ID_1689700_T', 'ID_1689718_G', 'ID_1689730_A', 'ID_1689747_A',\n",
+    "       'ID_1689751_T', 'ID_1689757_G', 'ID_1689897_C', 'ID_1689955_C',\n",
+    "       'ID_1690021_G', 'ID_1690030_A', 'ID_1690057_T', 'ID_1690102_G')\n",
+    "\n",
+    "\n",
+    "# without 4 singularites\n",
+    "mutations2 <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T', 'ID_1688339_T',  'ID_1688361_A', 'ID_1688365_A',  'ID_1688415_C', 'ID_1688482_T', 'ID_1688533_A',\n",
+    "               'ID_1688543_T', 'ID_1688543_C', 'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T', 'ID_1688776_C', 'ID_1688967_G', 'ID_1688990_A', 'ID_1689051_T', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T', 'ID_1689667_C',\n",
+    "               'ID_1689700_T', 'ID_1689747_A', 'ID_1689751_T', 'ID_1690021_G','ID_1690057_T', 'ID_1690102_G')\n",
+    "\n",
+    "\n",
+    "df2 <- select(df, AMP_MIC.logscaled , all_of(mutations))\n",
+    "\n",
+    "model_all <-lm(AMP_MIC.logscaled ~ ., df2)\n",
     "summary(model_all)\n",
     "# 1689466_T\n",
     "# 1689667_C"
@@ -194,11 +234,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd895452-474a-479b-8c29-4135f3e27674",
+   "execution_count": 6,
+   "id": "52e97abb-6912-4c33-bfff-f598376d0853",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“glm.fit: Angepasste Wahrscheinlichkeiten mit numerischem Wert 0 oder 1 aufgetreten”\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "glm(formula = AMP ~ ., family = \"binomial\", data = df2)\n",
+       "\n",
+       "Coefficients: (4 not defined because of singularities)\n",
+       "               Estimate Std. Error z value Pr(>|z|)   \n",
+       "(Intercept)     2.28872    0.90910   2.518  0.01182 * \n",
+       "ID_1688312_A    1.18235    1.48695   0.795  0.42652   \n",
+       "ID_1688314_T   -0.50785    2.24245  -0.226  0.82084   \n",
+       "ID_1688320_C   -3.99896    3.34600  -1.195  0.23203   \n",
+       "ID_1688338_T   -0.61777    2.01972  -0.306  0.75971   \n",
+       "ID_1688339_T   -3.51630    2.49565  -1.409  0.15884   \n",
+       "ID_1688340_G         NA         NA      NA       NA   \n",
+       "ID_1688350_C         NA         NA      NA       NA   \n",
+       "ID_1688354_T         NA         NA      NA       NA   \n",
+       "ID_1688361_A   -1.19494    1.92472  -0.621  0.53471   \n",
+       "ID_1688365_A    1.96958    2.40148   0.820  0.41213   \n",
+       "ID_1688365_G         NA         NA      NA       NA   \n",
+       "ID_1688415_C    0.05666    1.60341   0.035  0.97181   \n",
+       "ID_1688482_T   -2.22850    1.06757  -2.087  0.03685 * \n",
+       "ID_1688533_A    2.37417    2.14492   1.107  0.26835   \n",
+       "ID_1688543_T    4.85735    2.93291   1.656  0.09769 . \n",
+       "ID_1688543_C   -5.71571    2.65306  -2.154  0.03121 * \n",
+       "ID_1688616_A   -3.96023    1.47224  -2.690  0.00715 **\n",
+       "ID_1688617_T    2.29565    3.02158   0.760  0.44740   \n",
+       "ID_1688652_T    0.09586    1.30583   0.073  0.94148   \n",
+       "ID_1688770_T    1.09054    0.65041   1.677  0.09360 . \n",
+       "ID_1688776_C    1.82994    2.28721   0.800  0.42367   \n",
+       "ID_1688967_G  -28.87515 1552.19855  -0.019  0.98516   \n",
+       "ID_1688990_A   -3.06938    1.56336  -1.963  0.04961 * \n",
+       "ID_1689051_T   11.51784    4.94952   2.327  0.01996 * \n",
+       "ID_1689073_T    1.11462    0.90206   1.236  0.21659   \n",
+       "ID_1689405_T    1.66966    1.32223   1.263  0.20668   \n",
+       "ID_1689438_A    0.91616    3.12258   0.293  0.76922   \n",
+       "ID_1689466_T   23.76282 2991.55249   0.008  0.99366   \n",
+       "ID_1689603_T   -2.37242    2.01714  -1.176  0.23954   \n",
+       "ID_1689624_T   -4.68964 5040.47319  -0.001  0.99926   \n",
+       "ID_1689627_G   -2.41877    1.36462  -1.772  0.07631 . \n",
+       "ID_1689667_C  -18.74419 4056.72061  -0.005  0.99631   \n",
+       "ID_1689700_T    0.68222    2.01996   0.338  0.73556   \n",
+       "ID_1689718_G   -6.66098    3.12020  -2.135  0.03278 * \n",
+       "ID_1689730_A  -12.87882 2704.15782  -0.005  0.99620   \n",
+       "ID_1689747_A    7.41035 6522.64007   0.001  0.99909   \n",
+       "ID_1689751_T   17.79263 2704.15555   0.007  0.99475   \n",
+       "ID_1689757_G   10.33297 7060.96927   0.001  0.99883   \n",
+       "ID_1689897_C    7.28537    4.79878   1.518  0.12897   \n",
+       "ID_1689955_C   -5.95168    5.27891  -1.127  0.25955   \n",
+       "ID_1690021_G   -7.94327 4035.61354  -0.002  0.99843   \n",
+       "ID_1690030_A    1.65558    1.04144   1.590  0.11190   \n",
+       "ID_1690057_T    2.64200    1.40936   1.875  0.06085 . \n",
+       "ID_1690102_G    7.85524 4035.61413   0.002  0.99845   \n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "(Dispersion parameter for binomial family taken to be 1)\n",
+       "\n",
+       "    Null deviance: 406.60  on 321  degrees of freedom\n",
+       "Residual deviance: 222.49  on 281  degrees of freedom\n",
+       "AIC: 304.49\n",
+       "\n",
+       "Number of Fisher Scoring iterations: 17\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df <- read_feather('~/Documents/2023_haemophilius_gwas/hinf/results/feather/Hinf_norm_bin.feather')\n",
+    "# df$AMP_MIC <- as.numeric(df$AMP_MIC)\n",
+    "# df$AMP_MIC.logscaled <- log2(df$AMP_MIC)\n",
+    "df$AMP <- as.factor(df$AMP)\n",
+    "df <- subset(df, select = -c(FullID, Perc.ReadsMapped, CoverageMappedReads,\n",
+    "                             origin, serotype, beta_lactamase, samples, AMP_MIC))\n",
+    "\n",
+    "# original 32 variants in ftsI that lead to AA-changes\n",
+    "mutations <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T', 'ID_1688339_T', 'ID_1688340_G', 'ID_1688350_C', 'ID_1688354_T', 'ID_1688361_A', 'ID_1688365_A', 'ID_1688365_G', 'ID_1688415_C', 'ID_1688482_T', 'ID_1688533_A',\n",
+    "               'ID_1688543_T', 'ID_1688543_C', 'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T', 'ID_1688776_C', 'ID_1688967_G', 'ID_1688990_A', 'ID_1689051_T', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T', 'ID_1689667_C',\n",
+    "               'ID_1689700_T', 'ID_1689747_A', 'ID_1689751_T', 'ID_1690021_G','ID_1690057_T', 'ID_1690102_G')\n",
+    "\n",
+    "# 44 variants in ftsI that lead to AA-changes (new annotations\n",
+    "mutations <- c('ID_1688312_A', 'ID_1688314_T', 'ID_1688320_C', 'ID_1688338_T',\n",
+    "       'ID_1688339_T', 'ID_1688340_G', 'ID_1688350_C', 'ID_1688354_T',\n",
+    "       'ID_1688361_A', 'ID_1688365_A', 'ID_1688365_G', 'ID_1688415_C',\n",
+    "       'ID_1688482_T', 'ID_1688533_A', 'ID_1688543_T', 'ID_1688543_C',\n",
+    "       'ID_1688616_A', 'ID_1688617_T', 'ID_1688652_T', 'ID_1688770_T',\n",
+    "       'ID_1688776_C', 'ID_1688967_G', 'ID_1688990_A', 'ID_1689051_T',\n",
+    "       'ID_1689073_T', 'ID_1689405_T', 'ID_1689438_A', 'ID_1689466_T',\n",
+    "       'ID_1689603_T', 'ID_1689624_T', 'ID_1689627_G', 'ID_1689667_C',\n",
+    "       'ID_1689700_T', 'ID_1689718_G', 'ID_1689730_A', 'ID_1689747_A',\n",
+    "       'ID_1689751_T', 'ID_1689757_G', 'ID_1689897_C', 'ID_1689955_C',\n",
+    "       'ID_1690021_G', 'ID_1690030_A', 'ID_1690057_T', 'ID_1690102_G')\n",
+    "\n",
+    "# without 4 singularites\n",
+    "# mutations <- neu\n",
+    "\n",
+    "df2 <- select(df, AMP , all_of(mutations))\n",
+    "\n",
+    "model_all <-glm(AMP ~ ., df2, , family = \"binomial\")\n",
+    "summary(model_all)"
+   ]
   }
  ],
  "metadata": {
