--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -48,6 +48,392 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "c8306e71-c0ae-43e4-8716-08b8e0a9b967",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variants</th>\n",
+       "      <th>variant_position</th>\n",
+       "      <th>variant_quality</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>p_values.adj</th>\n",
+       "      <th>mutation</th>\n",
+       "      <th>r.squared</th>\n",
+       "      <th>adj.r.squared</th>\n",
+       "      <th>effect</th>\n",
+       "      <th>gene.name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HLR-561</th>\n",
+       "      <th>HLR-562</th>\n",
+       "      <th>HLR-563</th>\n",
+       "      <th>HLR-565</th>\n",
+       "      <th>HLR-566</th>\n",
+       "      <th>HLR-568</th>\n",
+       "      <th>HLR-569</th>\n",
+       "      <th>HLR-571</th>\n",
+       "      <th>HLR-572</th>\n",
+       "      <th>HLR-573</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID_1688582_C</td>\n",
+       "      <td>1688582</td>\n",
+       "      <td>17172.80</td>\n",
+       "      <td>1.262156e-26</td>\n",
+       "      <td>1.862880e-21</td>\n",
+       "      <td>T513T (ACA/ACG)</td>\n",
+       "      <td>3.524091e-01</td>\n",
+       "      <td>0.349947</td>\n",
+       "      <td>1.588410</td>\n",
+       "      <td>ftsI CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID_1688849_G</td>\n",
+       "      <td>1688849</td>\n",
+       "      <td>22054.80</td>\n",
+       "      <td>1.182945e-18</td>\n",
+       "      <td>8.729837e-14</td>\n",
+       "      <td>N424N (AAT/AAC)</td>\n",
+       "      <td>2.562792e-01</td>\n",
+       "      <td>0.253451</td>\n",
+       "      <td>1.325293</td>\n",
+       "      <td>ftsI CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID_1688876_A</td>\n",
+       "      <td>1688876</td>\n",
+       "      <td>21891.80</td>\n",
+       "      <td>4.825926e-18</td>\n",
+       "      <td>2.374275e-13</td>\n",
+       "      <td>G415G (GGA/GGT)</td>\n",
+       "      <td>2.483717e-01</td>\n",
+       "      <td>0.245514</td>\n",
+       "      <td>1.340451</td>\n",
+       "      <td>ftsI CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID_1688588_C</td>\n",
+       "      <td>1688588</td>\n",
+       "      <td>18706.80</td>\n",
+       "      <td>6.435606e-18</td>\n",
+       "      <td>2.374658e-13</td>\n",
+       "      <td>V511V (GTA/GTG)</td>\n",
+       "      <td>2.467430e-01</td>\n",
+       "      <td>0.243879</td>\n",
+       "      <td>1.388482</td>\n",
+       "      <td>ftsI CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ID_1366000_A</td>\n",
+       "      <td>1366000</td>\n",
+       "      <td>26901.80</td>\n",
+       "      <td>1.701882e-17</td>\n",
+       "      <td>2.790992e-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.412153e-01</td>\n",
+       "      <td>0.238330</td>\n",
+       "      <td>1.444945</td>\n",
+       "      <td>usg CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147590</th>\n",
+       "      <td>ID_326826_G</td>\n",
+       "      <td>326826</td>\n",
+       "      <td>6630.77</td>\n",
+       "      <td>9.999547e-01</td>\n",
+       "      <td>9.999656e-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.226561e-11</td>\n",
+       "      <td>-0.003802</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>glpT CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147591</th>\n",
+       "      <td>ID_615265_G</td>\n",
+       "      <td>615265</td>\n",
+       "      <td>16479.80</td>\n",
+       "      <td>9.999547e-01</td>\n",
+       "      <td>9.999656e-01</td>\n",
+       "      <td>H169H (CAT/CAC)</td>\n",
+       "      <td>1.226561e-11</td>\n",
+       "      <td>-0.003802</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>yegQ CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147592</th>\n",
+       "      <td>ID_1745660_GA</td>\n",
+       "      <td>1745660</td>\n",
+       "      <td>46031.70</td>\n",
+       "      <td>9.999571e-01</td>\n",
+       "      <td>9.999656e-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.103163e-11</td>\n",
+       "      <td>-0.003802</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147593</th>\n",
+       "      <td>ID_1074841_T</td>\n",
+       "      <td>1074841</td>\n",
+       "      <td>18353.80</td>\n",
+       "      <td>9.999588e-01</td>\n",
+       "      <td>9.999656e-01</td>\n",
+       "      <td>T286T (ACG/ACA)</td>\n",
+       "      <td>1.014344e-11</td>\n",
+       "      <td>-0.003802</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>prfC CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147594</th>\n",
+       "      <td>ID_733300_A</td>\n",
+       "      <td>733300</td>\n",
+       "      <td>19838.80</td>\n",
+       "      <td>9.999721e-01</td>\n",
+       "      <td>9.999721e-01</td>\n",
+       "      <td>T15T (ACG/ACA)</td>\n",
+       "      <td>4.664270e-12</td>\n",
+       "      <td>-0.003802</td>\n",
+       "      <td>-0.000006</td>\n",
+       "      <td>Tryptophan/tyrosine permease domain protein CDS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>147595 rows × 278 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             variants  variant_position  variant_quality        pvalue  \\\n",
+       "0        ID_1688582_C           1688582         17172.80  1.262156e-26   \n",
+       "1        ID_1688849_G           1688849         22054.80  1.182945e-18   \n",
+       "2        ID_1688876_A           1688876         21891.80  4.825926e-18   \n",
+       "3        ID_1688588_C           1688588         18706.80  6.435606e-18   \n",
+       "4        ID_1366000_A           1366000         26901.80  1.701882e-17   \n",
+       "...               ...               ...              ...           ...   \n",
+       "147590    ID_326826_G            326826          6630.77  9.999547e-01   \n",
+       "147591    ID_615265_G            615265         16479.80  9.999547e-01   \n",
+       "147592  ID_1745660_GA           1745660         46031.70  9.999571e-01   \n",
+       "147593   ID_1074841_T           1074841         18353.80  9.999588e-01   \n",
+       "147594    ID_733300_A            733300         19838.80  9.999721e-01   \n",
+       "\n",
+       "        p_values.adj         mutation     r.squared  adj.r.squared    effect  \\\n",
+       "0       1.862880e-21  T513T (ACA/ACG)  3.524091e-01       0.349947  1.588410   \n",
+       "1       8.729837e-14  N424N (AAT/AAC)  2.562792e-01       0.253451  1.325293   \n",
+       "2       2.374275e-13  G415G (GGA/GGT)  2.483717e-01       0.245514  1.340451   \n",
+       "3       2.374658e-13  V511V (GTA/GTG)  2.467430e-01       0.243879  1.388482   \n",
+       "4       2.790992e-13              NaN  2.412153e-01       0.238330  1.444945   \n",
+       "...              ...              ...           ...            ...       ...   \n",
+       "147590  9.999656e-01              NaN  1.226561e-11      -0.003802  0.000019   \n",
+       "147591  9.999656e-01  H169H (CAT/CAC)  1.226561e-11      -0.003802  0.000019   \n",
+       "147592  9.999656e-01              NaN  1.103163e-11      -0.003802  0.000009   \n",
+       "147593  9.999656e-01  T286T (ACG/ACA)  1.014344e-11      -0.003802  0.000010   \n",
+       "147594  9.999721e-01   T15T (ACG/ACA)  4.664270e-12      -0.003802 -0.000006   \n",
+       "\n",
+       "                                              gene.name  ... HLR-561 HLR-562  \\\n",
+       "0                                              ftsI CDS  ...       0       1   \n",
+       "1                                              ftsI CDS  ...       0       0   \n",
+       "2                                              ftsI CDS  ...       0       0   \n",
+       "3                                              ftsI CDS  ...       1       1   \n",
+       "4                                               usg CDS  ...       0       1   \n",
+       "...                                                 ...  ...     ...     ...   \n",
+       "147590                                         glpT CDS  ...       0       0   \n",
+       "147591                                         yegQ CDS  ...       0       0   \n",
+       "147592                                              NaN  ...       1       0   \n",
+       "147593                                         prfC CDS  ...       0       0   \n",
+       "147594  Tryptophan/tyrosine permease domain protein CDS  ...       0       1   \n",
+       "\n",
+       "       HLR-563  HLR-565  HLR-566  HLR-568  HLR-569  HLR-571  HLR-572  HLR-573  \n",
+       "0            0        0        0        0        1        0        0        0  \n",
+       "1            0        0        0        0        0        0        0        0  \n",
+       "2            0        0        0        0        0        0        0        0  \n",
+       "3            0        1        0        0        1        0        0        1  \n",
+       "4            1        0        0        0        0        0        1        0  \n",
+       "...        ...      ...      ...      ...      ...      ...      ...      ...  \n",
+       "147590       0        0        0        0        0        0        0        0  \n",
+       "147591       0        0        0        0        0        0        0        0  \n",
+       "147592       1        1        1        0        1        1        1        1  \n",
+       "147593       0        0        0        0        0        0        0        0  \n",
+       "147594       1        0        1        1        0        1        1        0  \n",
+       "\n",
+       "[147595 rows x 278 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_csv('../results/linreg_logscaled.csv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 194,
    "id": "08c8254f-4047-4d40-a95c-f3c614bce29a",
    "metadata": {},
